# MCPHackathon

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json
forge-optimizer/: pyproject.toml  requirements.txt
forge-optimizer-node/: package-lock.json  package.json
forge-optimizer-node/src/: index.js
forge-optimizer/optimizer_server/: __init__.py  main.py  optuna_engine.py  state.py
forge-os/: package-lock.json  package.json  tsconfig.json
forge-os/optimizer-node/: index.js
forge-os/resources/: styles.css  workspace.tsx
forge-os/resources/components/: ActivityFeed.tsx  ComponentMap.tsx  Dock.tsx  FloatingPanels.tsx  ForgeBar.tsx  ProposalCards.tsx  types.ts
forge-os/src/: index.ts
forge-os/src/demo/: endpointify-cache.ts  evolved-state.json  evolved-state.ts
forge-os/src/services/composite/: patterns.ts
forge-os/src/services/endpointify/: cache.ts  heuristics.ts  pipeline.ts  vision.ts
forge-os/src/services/optimizer-client/: client.ts
forge-os/src/services/router/: router.ts
forge-os/src/state/: store.ts
forge-os/src/tools/: accept-optimization.ts  endpointify-generate.ts  endpointify.ts  generate-composite.ts  get-status.ts  helpers.ts  load-evolved-state.ts  optimize.ts  register.ts  reject-optimization.ts  route-query.ts  test-composite.ts
scripts/: deploy-forge-optimizer.sh  deploy-forge-os.sh  dev.sh
